# Chat-App

./: Cargo.toml  README.md  docker-compose.yaml
entity/src/: conversation.rs  file_msg.rs  group.rs  message.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  user_group.rs
migration/src/: lib.rs  m20251214_174342_create_message.rs  m20251214_174342_create_user.rs  m20251214_174342_create_user_group.rs  m20251214_174346_create_conversation.rs  m20251214_174623_create_uuid_extension.rs
src/: error.rs  main.rs
src/features/auth/: handler.rs  middleware.rs  routes.rs
src/features/chat/: handler.rs  routes.rs  service.rs
src/features/group/: handler.rs  routes.rs
src/features/users/: handler.rs  routes.rs
src/socket/: handler.rs  mod.rs  model.rs
src/utils/: jwt.rs
