[package]
name = "chat-app"
version = "0.1.0"
edition = "2024"


[workspace]

members = [".", "migration","entity"]

[dependencies]
entity = {path = "entity"}
axum = {version = "0.7.5", features = ["multipart"]}
socketioxide = {version = "0.13.1", features = ["tracing"]}
tower = "0.4.13"
tower-http = {version = "0.5.2", features=["cors", "fs", "trace"]}
thiserror = "1.0.61"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
sea-orm = {version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print" ]}
mime = "0.3.17"
regex = "1.10.4"
bcrypt = "0.14"